hms-api-deployment copy.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: hms-api
spec:
  replicas: 1
  selector:
    matchLabels:
      app: hms-api
  template:
    metadata:
      labels:
        app: hms-api
    spec:
      containers:
      - name: hms-api
        image: sangrk/hms-api:v3
        imagePullPolicy: IfNotPresent
        ports:
        - containerPort: 80
        volumeMounts:
        - name: epic-privatekey
          mountPath: /src/privatekey.pem
          subPath: privatekey.pem
        resources:
          requests:
            cpu: 100m
            memory: 128Mi
          limits:
            cpu: 500m
            memory: 512Mi
      volumes:
      - name: epic-privatekey
        secret:
          secretName: epic-privatekey
