hms-api-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: hms-api-service
spec:
  type: LoadBalancer
  selector:
    app: hms-api
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
