orthanc.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: orthanc
spec:
  replicas: 1
  selector:
    matchLabels:
      app: orthanc
  template:
    metadata:
      labels:
        app: orthanc
    spec:
      containers:
      - name: orthanc
        image: jodogne/orthanc-plugins:latest
        ports:
        - containerPort: 8042
        - containerPort: 4242
        livenessProbe:
          tcpSocket:
            port: 8042
          initialDelaySeconds: 5
          periodSeconds: 10
          failureThreshold: 3
        volumeMounts:
        - name: orthanc-storage
          mountPath: /var/lib/orthanc/db/
      volumes:
      - name: orthanc-storage
        persistentVolumeClaim:
          claimName: orthanc-pvc
---
apiVersion: v1
kind: Service
metadata:
  name: orthanc-service
spec:
  type: LoadBalancer
  ports:
    - name: http
      port: 8042
      targetPort: 8042
      protocol: TCP
    - name: dicom
      port: 4242
      targetPort: 4242
      protocol: TCP
  selector:
    app: orthanc
