rabbitmq-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: hms-rabbitmq
spec:
  replicas: 1
  selector:
    matchLabels:
      app: hms-rabbitmq
  template:
    metadata:
      labels:
        app: hms-rabbitmq
    spec:
      containers:
      - name: hms-rabbitmq
        image: rabbitmq:3-management
        ports:
        - containerPort: 5672    
        - containerPort: 15672   
        volumeMounts:
        - name: rabbitmq-data
          mountPath: /var/lib/rabbitmq
      volumes:
      - name: rabbitmq-data
        persistentVolumeClaim:
          claimName: rabbitmq-pvc
---
apiVersion: v1
kind: Service
metadata:
  name: hms-rabbitmq
spec:
  ports:
    - name: amqp
      port: 5672
      targetPort: 5672
    - name: management
      port: 15672
      targetPort: 15672
  selector:
    app: hms-rabbitmq
