redis-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: hms-redis
spec:
  replicas: 1
  selector:
    matchLabels:
      app: hms-redis
  template:
    metadata:
      labels:
        app: hms-redis
    spec:
      containers:
      - name: hms-redis
        image: redis:7-alpine
        command: ["redis-server", "--appendonly", "yes", "--requirepass", "redis123"]
        ports:
        - containerPort: 6379
        volumeMounts:
        - name: redis-data
          mountPath: /data
        livenessProbe:
          exec:
            command:
              - redis-cli
              - -a
              - redis123
              - ping
          initialDelaySeconds: 5
          periodSeconds: 10
          failureThreshold: 3
      volumes:
      - name: redis-data
        persistentVolumeClaim:
          claimName: redis-pvc
---
apiVersion: v1
kind: Service
metadata:
  name: hms-redis
spec:
  ports:
    - name: redis
      port: 6379
      targetPort: 6379
  selector:
    app: hms-redis
