ingresses.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: hms-api-ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  rules:
  - host: "hms-api.local"
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: hms-api-service
            port:
              number: 80
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: hms-frontend-ingress
spec:
  rules:
  - host: "hms-frontend.local"
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: hms-frontend-service
            port:
              number: 80
